2002-11-02  Paolo Maggi <maggi@athena.polito.it>

	* bonobo-mdi.c: fixed Documents menu

2002-11-01  Paolo Maggi <maggi@athena.polito.it>

	Sync recent-files with libegg

2002-10-27  Paolo Maggi <maggi@athena.polito.it>

	* gedit-output-window.[ch]: new files

	* Makefile.am (gedit_SOURCES): added gedit-output-window.[ch]

	* bonobo-mdi.[ch] (bonobo_mdi_set_bottom_pane_for_window)
	(bonobo_mdi_get_bottom_pane_for_window): new functions to manage
	bottom panes

	* gedit-encodings.c (encodings): s/SHIFT-JIS/"SHIFT_JIS

	* gedit-file.c (gedit_file_save_as): set active view 

	* gedit-mdi.[ch] (gedit_mdi_get_output_window_from_window):
	new function

	* gedit-mdi.c: added support for GEDIT_TOOLBAR_ICONS_BOTH_HORIZ,
	added bottom pane

	* gedit-prefs-manager.[ch]: support GEDIT_TOOLBAR_ICONS_BOTH_HORIZ

	* gedit-ui.xml: set Ctrl+L as accellerator for Save All, set priority=1
	for FileOpen, FileSave and FileUndo

2002-10-15  Paolo Maggi  <maggi@athena.polito.it>

	* dialogs/gedit-dialog-replace.c:
	* dialogs/replace.glade2: use GnomeEntry instead of GtkEntry in the
	search/replace dialogs

2002-10-14  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-file-selector-util.c (replace_dialog): use a stock "Cancel" 
	button instead 	of the "Don't Replace" one (thanks to Matt Brubeck for
	the patch)

2002-10-14  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-document.c (gedit_document_save_as_real): add \n to end
	of file if needed (fix bug #95676)

	Partially fixed bug #87172

	* gedit-file.[ch] (gedit_file_save): added a force parameter
	(gedit_file_save_all): don't check if file is modified before 
	calling gedit_file_save

	* gedit-menus.c: removed /commands/FileSave from 
	gedit_menus_not_modified_doc_sensible_verbs

	* gedit-commands.c (gedit_cmd_file_save):
	* gedit-mdi.c (gedit_mdi_remove_child_handler): use the new
	gedit_file_save function

	* dialogs/gedit-preferences-dialog.c:
	* dialogs/gedit-preferences.glade2: improve Wrap Mode page usability