@@ -1,3 +1,8 @@
+2002-11-07  Andrew Sobala  <andrew@sobala.net>
+
+	* gedit-view.c: (gedit_view_line_numbers_expose): code to handle
+	zero-length files. Fixes: 97484
+
 2002-11-02  Paolo Maggi <maggi@athena.polito.it>
 
 	* bonobo-mdi.c: fixed Documents menu
